--- a/course-api-SDJ/Jenkinsfile
+++ b/course-api-SDJ/Jenkinsfile
@@ -4,24 +4,11 @@ pipeline{
 	stages{
 		stage ('compile stage'){
 		steps{
-			withMaven(maven : 'maven_3_8_4'){
-			  	sh 'mvn clean compile'
-			  	}
+			echo "Hey mugdha just a simple stage !"
 			}
 		}
-		stage ('Testing Stage'){
-			steps{
-			withMaven(maven : 'maven_3_8_4'){
-			  	sh 'mvn test'
-			  	}
-			}
+		
 		}
-		stage ('Deploy stage'){
-			steps{
-			withMaven(maven : 'maven_3_8_4'){
-			  	sh 'mvn deploy'
-			  	}
-			}
-		}
+		
 	}
 }
