--- a/course-api-SDJ/Jenkinsfile
+++ b/course-api-SDJ/Jenkinsfile
@@ -3,7 +3,29 @@ pipeline{
 	stages{
 		stage ('compile stage'){
 		steps{
-			echo "Hey mugdha just a simple stage !"
+			withMaven(maven : 
+
+'maven_3_8_4'){
+			  	sh 'mvn clean compile'
+			  	}
+			}
+		}
+		stage ('Testing Stage'){
+			steps{
+			withMaven(maven : 
+
+'maven_3_8_4'){
+			  	sh 'mvn test'
+			  	}
+			}
+		}
+		stage ('Deploy stage'){
+			steps{
+			withMaven(maven : 
+
+'maven_3_8_4'){
+			  	sh 'mvn deploy'
+			  	}
 			}
 		}
 	}
