--- a/course-api-SDJ/Jenkinsfile
+++ b/course-api-SDJ/Jenkinsfile
@@ -1,32 +1,17 @@
 pipeline{
+	environment {
+		mavenHome = tool 'maven'
+		}
+
 	agent any
 	stages{
 		stage ('compile stage'){
-		steps{
-			withMaven(maven : 
-
-'maven_3_8_4'){
-			  	sh 'mvn clean compile'
-			  	}
-			}
-		}
-		stage ('Testing Stage'){
 			steps{
-			withMaven(maven : 
-
-'maven_3_8_4'){
-			  	sh 'mvn test'
-			  	}
+			
+			  	echo "hey !"
+			  	
 			}
 		}
-		stage ('Deploy stage'){
-			steps{
-			withMaven(maven : 
-
-'maven_3_8_4'){
-			  	sh 'mvn deploy'
-			  	}
-			}
-		}
+		
 	}
 }
